c3-securitygp.tf
# create security group-SSH traffic
resource "aws_security_group" "vpc-ssh" {
  name        = "vpc-ssh"
  description = "test vpc ssh"
  ingress {
    description = "allow prot 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "allow all ip port"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "ssh-vpc"
  }

}

# create security group web-traffic
resource "aws_security_group" "vpc-web" {
  name        = "vpc-web"
  description = "vpc web test"
  ingress {
    description = "allow port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {
    description = "allow all pot"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    name = "web-vpc"
  }

}
